# pygpt4all

./: .directory  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CMakeLists.txt  LICENSE  README.md  index.html  install.bat  install.sh  mkdocs.yml  objects.inv  old-README.md  pyproject.toml  requirements.txt  setup.py  uninstall.bat
.github/: dependabot.yml
pygptj/: .gitmodules  CMakeLists.txt  README.md  mkdocs.yml  pyproject.toml  setup.py
pygptj/.github/workflows/: docs.yml  pip.yml
pygptj/docs/: index.md
pygptj/mstest/: test.py  test2.py
pygptj/pygptj/: constants.py  model.py
pygptj/src/: gptj.cpp  main.cpp  main.h  utils.cpp  utils.h
pyllamacpp/: .appveyor.yml  .directory  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  _logger.py  constants.py  install.bat  install.sh  mkdocs.yml  model.py  pyproject.toml  requirements.txt  setup.py  uninstall.bat  uninstall.sh  utils.py  webui.py
pyllamacpp/.github/workflows/: conda.yml  docs.yml  format.yml  wheels-linux.yml  wheels-win-mac.yml
pyllamacpp/conda.recipe/: meta.yaml
pyllamacpp/docs/: Makefile  cmake_example.rst  conf.py  index.md  index.rst
pyllamacpp/llama.cpp/: .dockerignore  .gitignore  CMakeLists.txt  LICENSE  Makefile  Package.swift  README.md  SHA256SUMS  convert-ggml-to-pth.py  convert-gptq-to-ggml.py  convert-pth-to-ggml.py  convert-unversioned-ggml-to-ggml.py  flake.nix  ggml.c  ggml.h  llama.cpp  llama.h  migrate-ggml-2023-03-30-pr613.py
pyllamacpp/llama.cpp/.devops/: full.Dockerfile  main.Dockerfile  tools.sh
pyllamacpp/llama.cpp/.github/ISSUE_TEMPLATE/: custom.md
pyllamacpp/llama.cpp/.github/workflows/: build.yml  docker.yml
pyllamacpp/llama.cpp/examples/: CMakeLists.txt  alpaca.sh  chat-13B.bat  chat-13B.sh  chat.sh  common.cpp  common.h  reason-act.sh
pyllamacpp/llama.cpp/examples/embedding/: CMakeLists.txt  embedding.cpp
pyllamacpp/llama.cpp/examples/main/: CMakeLists.txt  main.cpp
pyllamacpp/llama.cpp/examples/perplexity/: CMakeLists.txt  perplexity.cpp
pyllamacpp/llama.cpp/examples/quantize/: CMakeLists.txt  README.md  quantize.cpp
pyllamacpp/llama.cpp/prompts/: alpaca.txt  chat-with-bob.txt  dan.txt  reason-act.txt
pyllamacpp/llama.cpp/tests/: CMakeLists.txt  test-double-float.c  test-quantize.c  test-tokenizer-0.cpp
pyllamacpp/pybind11/: .appveyor.yml  .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CMakeLists.txt  LICENSE  MANIFEST.in  README.rst  noxfile.py  pyproject.toml  setup.cfg  setup.py
pyllamacpp/pybind11/.github/: CODEOWNERS  CONTRIBUTING.md  dependabot.yml  labeler.yml  labeler_merged.yml  pull_request_template.md
pyllamacpp/pybind11/.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
pyllamacpp/pybind11/.github/workflows/: ci.yml  configure.yml  format.yml  labeler.yml  pip.yml  upstream.yml
pyllamacpp/pybind11/docs/: Doxyfile  basics.rst  benchmark.py  benchmark.rst  changelog.rst  classes.rst  compiling.rst  conf.py  faq.rst  index.rst  installing.rst  limitations.rst  reference.rst  release.rst  requirements.txt  upgrade.rst
pyllamacpp/pybind11/docs/_static/: theme_overrides.css
pyllamacpp/pybind11/docs/advanced/: classes.rst  embedding.rst  exceptions.rst  functions.rst  misc.rst  smart_ptrs.rst
pyllamacpp/pybind11/docs/advanced/cast/: chrono.rst  custom.rst  eigen.rst  functional.rst  index.rst  overview.rst  stl.rst  strings.rst
pyllamacpp/pybind11/docs/advanced/pycpp/: index.rst  numpy.rst  object.rst  utilities.rst
pyllamacpp/pybind11/docs/cmake/: index.rst
pyllamacpp/pybind11/include/pybind11/: attr.h  buffer_info.h  cast.h  chrono.h  complex.h  eigen.h  embed.h  eval.h  functional.h  gil.h  iostream.h  numpy.h  operators.h  options.h  pybind11.h  pytypes.h  stl.h  stl_bind.h
pyllamacpp/pybind11/include/pybind11/detail/: class.h  common.h  descr.h  init.h  internals.h  type_caster_base.h  typeid.h
pyllamacpp/pybind11/include/pybind11/stl/: filesystem.h
pyllamacpp/pybind11/pybind11/: __init__.py  __main__.py  _version.py  _version.pyi  commands.py  setup_helpers.py  setup_helpers.pyi
pyllamacpp/pybind11/tests/: CMakeLists.txt  conftest.py  constructor_stats.h  cross_module_gil_utils.cpp  local_bindings.h  object.h  pybind11_cross_module_tests.cpp  pybind11_tests.cpp  pybind11_tests.h  pytest.ini  requirements.txt  test_async.cpp  test_async.py  test_buffers.cpp  test_buffers.py  test_builtin_casters.cpp  test_builtin_casters.py  test_call_policies.cpp  test_call_policies.py  test_callbacks.cpp  test_callbacks.py  test_chrono.cpp  test_chrono.py  test_class.cpp  test_class.py  test_const_name.cpp  test_const_name.py  test_constants_and_functions.cpp  test_constants_and_functions.py  test_copy_move.cpp  test_copy_move.py  test_custom_type_casters.cpp  test_custom_type_casters.py  test_custom_type_setup.cpp  test_custom_type_setup.py  test_docstring_options.cpp  test_docstring_options.py  test_eigen.cpp  test_eigen.py  test_enum.cpp  (+55 more)
pyllamacpp/pybind11/tests/extra_python_package/: test_files.py
pyllamacpp/pybind11/tests/extra_setuptools/: test_setuphelper.py
pyllamacpp/pybind11/tests/test_cmake_build/: CMakeLists.txt  embed.cpp  main.cpp  test.py
pyllamacpp/pybind11/tests/test_cmake_build/installed_embed/: CMakeLists.txt
pyllamacpp/pybind11/tests/test_cmake_build/installed_function/: CMakeLists.txt
pyllamacpp/pybind11/tests/test_embed/: CMakeLists.txt  catch.cpp  external_module.cpp  test_interpreter.cpp  test_interpreter.py  test_trampoline.py
pyllamacpp/pybind11/tools/: FindCatch.cmake  FindEigen3.cmake  FindPythonLibsNew.cmake  check-style.sh  cmake_uninstall.cmake.in  libsize.py  make_changelog.py  pybind11Common.cmake  pybind11Config.cmake.in  pybind11NewTools.cmake  pybind11Tools.cmake  pyproject.toml  setup_global.py.in  setup_main.py.in
pyllamacpp/pyllamacpp/: _logger.py  constants.py  model.py  utils.py  webui.py
pyllamacpp/pyllamacpp/scripts/: convert.py  convert_gpt4all.py  migrate.py
pyllamacpp/scripts/: convert-gpt4all.py  migrate.py
pyllamacpp/src/: main.cpp  main.h
(+23 files in other folders)
